O erro era que não tinha o m maiusculo

--- a/Animation.css
+++ b/Animation.css
@@ -2,7 +2,7 @@
     animation: MudarParaPreto 2s ease-in-out;
 }
 
-@keyframes mudarParaPreto {
+@keyframes MudarParaPreto {
     0%{
         background-color: white;
     }
@@ -10,7 +10,7 @@
     50%{
         background-color: rgb(167, 166, 166);
     }
-    
+
     100%{
         background-color: rgb(57, 57, 57);
     }
